--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,14 +1,59 @@
-<div class="row">
+<div class="row my-4">
 
   <div class="col-md-6">
     <h3>List of products</h3>
   </div>
+
+  <div class="col-md-6 text-right">
+    <button class="btn btn-dark btn-sm">
+      <i class="fa fa-plus"></i> New Product
+    </button>
+  </div>
+
 </div>
+
+<div class="row my-4">
+  <div class="col-md-6 mx-auto">
+    <div class="form-group">
+      <label for="barcode"> bar code</label>
+      <input [(ngModel)]="product.barcode" id="barcode"  type="text" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="name"> name</label>
+      <input [(ngModel)]="product.name" id="name" type="text" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="cost"> cost</label>
+      <input [(ngModel)]="product.cost" id="cost" type="number" class="form-control">
+    </div>
+    <div class="form-group">
+      <label class="form-check-inline">
+        <input class="form-check-input" type="radio" name="vatClass" [value]="6" [(ngModel)]="product.vatClass">
+        6%
+      </label>
+      <label class="form-check-inline">
+        <input class="form-check-input" type="radio" name="vatClass" [value]="21" [(ngModel)]="product.vatClass">
+        21%
+      </label>
+    </div>
+    <button (click)="addProduct()" class="btn btn-success btn-block">
+      <i class="fa fa-send"></i> New product
+    </button>
+  </div>
+
+</div>
+
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6 mx-auto">
     <ul class="list-group">
-      <li *ngFor="let product of products" class="list-group-item">
-        {{product.name}}
+      <li *ngFor="let product of products" class="list-group-item justify-content-between align-items-center">
+        <button (click)="deleteProduct(product.id)" class="btn btn-sm">
+          <i class="fa fa-trash"></i>
+        </button>
+        <button class="btn btn-sm">
+          <i class="fa fa-pencil"></i>
+        </button>
+        {{product.barcode}} - {{product.name}}
       </li>
     </ul>
   </div>
