--- a/src/app/components/receipt/receipt.component.html
+++ b/src/app/components/receipt/receipt.component.html
@@ -28,7 +28,7 @@
 <div class="row">
   <div class="col-md-6 mx-auto">
     <ul class="list-group">
-      <li *ngFor="let product of products" class="list-group-item justify-content-between align-items-center">
+      <li *ngFor="let product of product" class="list-group-item justify-content-between align-items-center">
         <button (click)="addProductToReceipt(product)" *ngIf="receiptCreation" class="btn btn-dark btn-sm">
           <i class="fa fa-plus"></i> add to receipt
         </button>
@@ -54,11 +54,12 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let product of receipt.products">
+        <tr *ngFor="let barcode of listBarcodes ">
           <th scope="row">#</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
+          <td>{{receiptProducts[barcode]['name']}}</td>
+          <td>{{receiptProducts[barcode]['amount']}}</td>
+          <td>{{receiptProducts[barcode]['cost']}}</td>
+          <td>{{receiptProducts[barcode]['total']}}</td>
         </tr>
         <tr>
           <td>   </td>
