--- a/src/app/components/receipt/receipt.component.html
+++ b/src/app/components/receipt/receipt.component.html
@@ -74,10 +74,10 @@
             </p></td>
           <td >
             <p>
-              $6.94
+              ${{total}}
             </p>
             <p>
-              $6.94
+              $----
             </p></td>
         </tr>
         <tr>
@@ -85,7 +85,7 @@
           <td>   </td>
           <td>   </td>
           <td ><h4><strong>Total: </strong></h4></td>
-          <td class="text-danger"><h4><strong>$31.53</strong></h4></td>
+          <td class="text-danger"><h4><strong>$---</strong></h4></td>
         </tr>
         </tbody>
       </table>
