--- a/src/app/components/receipt/receipt.component.html
+++ b/src/app/components/receipt/receipt.component.html
@@ -28,7 +28,7 @@
 <div class="row">
   <div class="col-md-6 mx-auto">
     <ul class="list-group">
-      <li *ngFor="let product of product" class="list-group-item justify-content-between align-items-center">
+      <li  class="list-group-item justify-content-between align-items-center">
         <button (click)="addProductToReceipt(product)" *ngIf="receiptCreation" class="btn btn-dark btn-sm">
           <i class="fa fa-plus"></i> add to receipt
         </button>
@@ -74,10 +74,10 @@
             </p></td>
           <td >
             <p>
-              ${{total}}
+              ${{subtotal}}
             </p>
             <p>
-              $----
+              ${{tax}}
             </p></td>
         </tr>
         <tr>
@@ -85,7 +85,7 @@
           <td>   </td>
           <td>   </td>
           <td ><h4><strong>Total: </strong></h4></td>
-          <td class="text-danger"><h4><strong>$---</strong></h4></td>
+          <td class="text-danger"><h4><strong>${{subtotal+tax}}</strong></h4></td>
         </tr>
         </tbody>
       </table>
